Mark app as configurable

--- a/appinfo.json
+++ b/appinfo.json
@@ -10,11 +10,13 @@
     "watchface": true
   },
   "capabilities": [
-    "location"
+    "location",
+    "configurable"
   ],
   "appKeys": {
     "KEY_TEMPERATURE": 0,
-    "KEY_CONDITIONS": 1
+    "KEY_CONDITIONS": 1,
+    "FORECAST_API_KEY": 2
   },
   "resources": {
     "media": []
